--- a/SpaceXLaunches/View/LaunchCell/LaunchCell.xib
+++ b/SpaceXLaunches/View/LaunchCell/LaunchCell.xib
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21225" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_0" orientation="portrait" appearance="light"/>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21207"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -9,39 +10,53 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="LaunchCell" customModule="SpaceXLaunches" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="76" id="KGk-i7-Jjw" customClass="LaunchCell" customModule="SpaceXLaunches" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="76"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="76"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LPb-z2-2aN">
-                        <rect key="frame" x="0.0" y="11.666666666666664" width="50" height="21"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="250" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UEu-9M-HGE">
+                        <rect key="frame" x="76" y="16" width="240" height="25.666666666666671"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="249" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UEu-9M-HGE">
-                        <rect key="frame" x="58" y="11.666666666666664" width="262" height="21"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7pC-Vs-IrD">
+                        <rect key="frame" x="76" y="45.666666666666664" width="26.666666666666671" height="14.333333333333336"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="rnd-Ul-7kf">
+                        <rect key="frame" x="4" y="4" width="68" height="68"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="68" id="LpC-ZW-KNU"/>
+                            <constraint firstAttribute="width" secondItem="rnd-Ul-7kf" secondAttribute="height" multiplier="1:1" id="vNu-cM-vUO"/>
+                        </constraints>
+                    </imageView>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="LPb-z2-2aN" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="1ZK-Uf-fn7"/>
-                    <constraint firstItem="UEu-9M-HGE" firstAttribute="leading" secondItem="LPb-z2-2aN" secondAttribute="trailing" constant="8" id="OpU-TV-FuR"/>
-                    <constraint firstAttribute="trailing" secondItem="UEu-9M-HGE" secondAttribute="trailing" id="Xuw-1C-SfY"/>
-                    <constraint firstItem="LPb-z2-2aN" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="eYr-Fh-MYK"/>
-                    <constraint firstItem="UEu-9M-HGE" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="qdS-qT-FVV"/>
+                    <constraint firstItem="7pC-Vs-IrD" firstAttribute="leading" secondItem="UEu-9M-HGE" secondAttribute="leading" id="0KE-rk-fo2"/>
+                    <constraint firstAttribute="bottom" secondItem="rnd-Ul-7kf" secondAttribute="bottom" constant="4" id="0oL-Y0-Oa7"/>
+                    <constraint firstItem="UEu-9M-HGE" firstAttribute="leading" secondItem="rnd-Ul-7kf" secondAttribute="trailing" constant="4" id="HZ5-xQ-KI5"/>
+                    <constraint firstItem="rnd-Ul-7kf" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="4" id="SHJ-93-oyD"/>
+                    <constraint firstAttribute="trailing" secondItem="UEu-9M-HGE" secondAttribute="trailing" constant="4" id="Xuw-1C-SfY"/>
+                    <constraint firstItem="7pC-Vs-IrD" firstAttribute="top" secondItem="UEu-9M-HGE" secondAttribute="bottom" constant="4" id="c1P-fw-AXB"/>
+                    <constraint firstItem="UEu-9M-HGE" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="16" id="io3-ee-mmK"/>
+                    <constraint firstAttribute="bottom" secondItem="7pC-Vs-IrD" secondAttribute="bottom" constant="16" id="uwH-gk-DwM"/>
+                    <constraint firstItem="rnd-Ul-7kf" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="4" id="x2d-vo-p0Q"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
+                <outlet property="cellView" destination="H2p-sc-9uM" id="APp-0Q-amr"/>
+                <outlet property="dateLabel" destination="7pC-Vs-IrD" id="Uod-eO-gS6"/>
                 <outlet property="nameLabel" destination="UEu-9M-HGE" id="zGb-5v-hXN"/>
+                <outlet property="thumbnailImageView" destination="rnd-Ul-7kf" id="viW-m6-DQ5"/>
             </connections>
-            <point key="canvasLocation" x="92" y="-11"/>
+            <point key="canvasLocation" x="90.769230769230759" y="0.0"/>
         </tableViewCell>
     </objects>
 </document>
