--- a/SpaceXLaunches/View/Base.lproj/Main.storyboard
+++ b/SpaceXLaunches/View/Base.lproj/Main.storyboard
@@ -23,7 +23,7 @@
                             </tableView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                        <color key="backgroundColor" systemColor="systemBrownColor"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="hmd-IU-n3a" secondAttribute="bottom" id="DfU-Ge-0lL"/>
                             <constraint firstItem="hmd-IU-n3a" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="aby-ba-leW"/>
@@ -49,36 +49,26 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="g7Z-8K-MbQ">
-                                <rect key="frame" x="158" y="63" width="74" height="34"/>
+                                <rect key="frame" x="158" y="279" width="74" height="34"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="29"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="TTL-Dl-LRJ">
-                                <rect key="frame" x="16" y="105" width="167" height="128"/>
+                                <rect key="frame" x="95" y="63" width="200" height="200"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="128" id="Pwi-3S-xmb"/>
+                                    <constraint firstAttribute="width" constant="200" id="HbV-fP-CX6"/>
+                                    <constraint firstAttribute="width" secondItem="TTL-Dl-LRJ" secondAttribute="height" multiplier="1:1" id="af2-OG-Ob1"/>
                                 </constraints>
                             </imageView>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="B22-XY-Gyz">
-                                <rect key="frame" x="183" y="105" width="191" height="128"/>
-                                <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="N4o-ae-nWs">
-                                        <rect key="frame" x="8" y="8" width="42" height="21"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                </subviews>
-                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <constraints>
-                                    <constraint firstItem="N4o-ae-nWs" firstAttribute="leading" secondItem="B22-XY-Gyz" secondAttribute="leading" constant="8" id="8h8-75-lpm"/>
-                                    <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="N4o-ae-nWs" secondAttribute="trailing" constant="20" symbolic="YES" id="HLg-BO-F29"/>
-                                    <constraint firstItem="N4o-ae-nWs" firstAttribute="top" secondItem="B22-XY-Gyz" secondAttribute="top" constant="8" id="IDT-xz-2vJ"/>
-                                </constraints>
-                            </view>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="Pch-Ih-P3E">
-                                <rect key="frame" x="16" y="241" width="358" height="164"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kDA-AG-bYl">
+                                <rect key="frame" x="174" y="321" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" editable="NO" textAlignment="natural" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Pch-Ih-P3E">
+                                <rect key="frame" x="4" y="350" width="382" height="164"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                 <color key="textColor" systemColor="labelColor"/>
@@ -89,28 +79,23 @@
                         <viewLayoutGuide key="safeArea" id="aYO-6q-vWI"/>
                         <color key="backgroundColor" systemColor="systemGray2Color"/>
                         <constraints>
-                            <constraint firstItem="TTL-Dl-LRJ" firstAttribute="leading" secondItem="aYO-6q-vWI" secondAttribute="leading" constant="16" id="0sT-kN-uKT"/>
-                            <constraint firstItem="Pch-Ih-P3E" firstAttribute="leading" secondItem="TTL-Dl-LRJ" secondAttribute="leading" id="4d9-IH-TwL"/>
-                            <constraint firstItem="TTL-Dl-LRJ" firstAttribute="top" secondItem="g7Z-8K-MbQ" secondAttribute="bottom" constant="8" id="HUh-ID-xmJ"/>
-                            <constraint firstItem="Pch-Ih-P3E" firstAttribute="trailing" secondItem="B22-XY-Gyz" secondAttribute="trailing" id="LGN-2h-keX"/>
-                            <constraint firstItem="B22-XY-Gyz" firstAttribute="leading" secondItem="TTL-Dl-LRJ" secondAttribute="trailing" id="OvF-ix-ifB"/>
-                            <constraint firstItem="g7Z-8K-MbQ" firstAttribute="top" secondItem="aYO-6q-vWI" secondAttribute="top" constant="16" id="Uoj-AH-C31"/>
-                            <constraint firstItem="B22-XY-Gyz" firstAttribute="top" secondItem="g7Z-8K-MbQ" secondAttribute="bottom" constant="8" id="We5-hP-oy1"/>
-                            <constraint firstItem="g7Z-8K-MbQ" firstAttribute="centerX" secondItem="uZB-H5-PKk" secondAttribute="centerX" id="XcX-BG-edz"/>
-                            <constraint firstItem="B22-XY-Gyz" firstAttribute="leading" secondItem="uZB-H5-PKk" secondAttribute="leading" constant="183" id="YHS-Jk-rws"/>
-                            <constraint firstItem="Pch-Ih-P3E" firstAttribute="top" secondItem="TTL-Dl-LRJ" secondAttribute="bottom" constant="8" id="ZK8-cB-CRW"/>
-                            <constraint firstItem="B22-XY-Gyz" firstAttribute="height" secondItem="TTL-Dl-LRJ" secondAttribute="height" multiplier="0.90625" constant="12" id="arF-v0-V7O"/>
-                            <constraint firstItem="aYO-6q-vWI" firstAttribute="trailing" secondItem="B22-XY-Gyz" secondAttribute="trailing" constant="16" id="p11-YX-kAl"/>
-                            <constraint firstItem="aYO-6q-vWI" firstAttribute="bottom" secondItem="Pch-Ih-P3E" secondAttribute="bottom" constant="405" id="vME-di-ATq"/>
+                            <constraint firstItem="Pch-Ih-P3E" firstAttribute="leading" secondItem="aYO-6q-vWI" secondAttribute="leading" constant="4" id="46K-PY-tA8"/>
+                            <constraint firstItem="aYO-6q-vWI" firstAttribute="trailing" secondItem="Pch-Ih-P3E" secondAttribute="trailing" constant="4" id="GI0-sa-bmw"/>
+                            <constraint firstItem="Pch-Ih-P3E" firstAttribute="top" secondItem="kDA-AG-bYl" secondAttribute="bottom" constant="4" id="KDI-Hg-cJw"/>
+                            <constraint firstItem="kDA-AG-bYl" firstAttribute="centerX" secondItem="uZB-H5-PKk" secondAttribute="centerX" id="MHN-ba-9pm"/>
+                            <constraint firstItem="TTL-Dl-LRJ" firstAttribute="centerX" secondItem="uZB-H5-PKk" secondAttribute="centerX" id="NEz-YI-2ui"/>
+                            <constraint firstItem="g7Z-8K-MbQ" firstAttribute="top" secondItem="TTL-Dl-LRJ" secondAttribute="bottom" constant="16" id="eks-i8-RUZ"/>
+                            <constraint firstItem="g7Z-8K-MbQ" firstAttribute="centerX" secondItem="uZB-H5-PKk" secondAttribute="centerX" id="frY-MO-kUe"/>
+                            <constraint firstItem="kDA-AG-bYl" firstAttribute="top" secondItem="g7Z-8K-MbQ" secondAttribute="bottom" constant="8" id="hy3-Nu-clD"/>
+                            <constraint firstItem="TTL-Dl-LRJ" firstAttribute="top" secondItem="aYO-6q-vWI" secondAttribute="top" constant="16" id="o4M-TV-sIP"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="zy0-p9-2KY"/>
                     <connections>
-                        <outlet property="dateLabel" destination="N4o-ae-nWs" id="kcp-pR-NYz"/>
+                        <outlet property="dateLabel" destination="kDA-AG-bYl" id="MM6-xl-KhX"/>
                         <outlet property="detailTextView" destination="Pch-Ih-P3E" id="jzm-Qr-qYZ"/>
                         <outlet property="imageView" destination="TTL-Dl-LRJ" id="O74-UA-4K3"/>
                         <outlet property="titleLabel" destination="g7Z-8K-MbQ" id="JXs-TT-dz6"/>
-                        <outlet property="viewDate" destination="B22-XY-Gyz" id="iRx-L8-Op5"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9Tt-pr-YcT" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -142,9 +127,6 @@
         </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-        <systemColor name="systemBrownColor">
-            <color red="0.63529411764705879" green="0.51764705882352946" blue="0.36862745098039218" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemGray2Color">
             <color red="0.68235294117647061" green="0.68235294117647061" blue="0.69803921568627447" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
