--- a/SpaceXLaunches/View/LaunchCell/LaunchCell.xib
+++ b/SpaceXLaunches/View/LaunchCell/LaunchCell.xib
@@ -10,42 +10,49 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="76" id="KGk-i7-Jjw" customClass="LaunchCell" customModule="SpaceXLaunches" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="76"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="72" id="KGk-i7-Jjw" customClass="LaunchCell" customModule="SpaceXLaunches" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="72"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="76"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="72"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="250" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UEu-9M-HGE">
-                        <rect key="frame" x="76" y="16" width="240" height="25.666666666666671"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" horizontalCompressionResistancePriority="250" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UEu-9M-HGE">
+                        <rect key="frame" x="76" y="7.9999999999999982" width="41.333333333333343" height="20.333333333333329"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="rnd-Ul-7kf">
+                        <rect key="frame" x="4" y="4" width="68" height="64"/>
+                        <color key="tintColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="64" id="EKP-0X-Og6"/>
+                            <constraint firstAttribute="height" constant="64" id="OBG-Ep-5PK"/>
+                            <constraint firstAttribute="width" constant="68" id="ScJ-G1-F58"/>
+                        </constraints>
+                    </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jrn-0P-Dma">
+                        <rect key="frame" x="76" y="50.666666666666664" width="27" height="12"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7pC-Vs-IrD">
-                        <rect key="frame" x="76" y="45.666666666666664" width="26.666666666666671" height="14.333333333333336"/>
+                        <rect key="frame" x="76" y="32.333333333333336" width="26.666666666666671" height="14.333333333333336"/>
                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="rnd-Ul-7kf">
-                        <rect key="frame" x="4" y="4" width="68" height="68"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="68" id="LpC-ZW-KNU"/>
-                            <constraint firstAttribute="width" secondItem="rnd-Ul-7kf" secondAttribute="height" multiplier="1:1" id="vNu-cM-vUO"/>
-                        </constraints>
-                    </imageView>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="7pC-Vs-IrD" firstAttribute="leading" secondItem="UEu-9M-HGE" secondAttribute="leading" id="0KE-rk-fo2"/>
-                    <constraint firstAttribute="bottom" secondItem="rnd-Ul-7kf" secondAttribute="bottom" constant="4" id="0oL-Y0-Oa7"/>
-                    <constraint firstItem="UEu-9M-HGE" firstAttribute="leading" secondItem="rnd-Ul-7kf" secondAttribute="trailing" constant="4" id="HZ5-xQ-KI5"/>
+                    <constraint firstItem="7pC-Vs-IrD" firstAttribute="leading" secondItem="rnd-Ul-7kf" secondAttribute="trailing" constant="4" id="3XY-T2-gc1"/>
+                    <constraint firstItem="jrn-0P-Dma" firstAttribute="leading" secondItem="rnd-Ul-7kf" secondAttribute="trailing" constant="4" id="7vP-lE-vWh"/>
+                    <constraint firstItem="UEu-9M-HGE" firstAttribute="top" secondItem="rnd-Ul-7kf" secondAttribute="top" constant="4" id="BZ0-Mm-2YW"/>
+                    <constraint firstItem="jrn-0P-Dma" firstAttribute="top" secondItem="7pC-Vs-IrD" secondAttribute="bottom" constant="4" id="Lec-QB-ZMR"/>
                     <constraint firstItem="rnd-Ul-7kf" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="4" id="SHJ-93-oyD"/>
-                    <constraint firstAttribute="trailing" secondItem="UEu-9M-HGE" secondAttribute="trailing" constant="4" id="Xuw-1C-SfY"/>
-                    <constraint firstItem="7pC-Vs-IrD" firstAttribute="top" secondItem="UEu-9M-HGE" secondAttribute="bottom" constant="4" id="c1P-fw-AXB"/>
-                    <constraint firstItem="UEu-9M-HGE" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="16" id="io3-ee-mmK"/>
-                    <constraint firstAttribute="bottom" secondItem="7pC-Vs-IrD" secondAttribute="bottom" constant="16" id="uwH-gk-DwM"/>
+                    <constraint firstItem="7pC-Vs-IrD" firstAttribute="top" secondItem="UEu-9M-HGE" secondAttribute="bottom" constant="4" id="Xlj-Np-qHI"/>
+                    <constraint firstItem="UEu-9M-HGE" firstAttribute="leading" secondItem="rnd-Ul-7kf" secondAttribute="trailing" constant="4" id="jhV-ea-30n"/>
                     <constraint firstItem="rnd-Ul-7kf" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="4" id="x2d-vo-p0Q"/>
                 </constraints>
             </tableViewCellContentView>
@@ -53,10 +60,11 @@
             <connections>
                 <outlet property="cellView" destination="H2p-sc-9uM" id="APp-0Q-amr"/>
                 <outlet property="dateLabel" destination="7pC-Vs-IrD" id="Uod-eO-gS6"/>
+                <outlet property="detailLabel" destination="jrn-0P-Dma" id="XZK-4a-755"/>
                 <outlet property="nameLabel" destination="UEu-9M-HGE" id="zGb-5v-hXN"/>
                 <outlet property="thumbnailImageView" destination="rnd-Ul-7kf" id="viW-m6-DQ5"/>
             </connections>
-            <point key="canvasLocation" x="90.769230769230759" y="0.0"/>
+            <point key="canvasLocation" x="90.769230769230759" y="-1.4218009478672986"/>
         </tableViewCell>
     </objects>
 </document>
